app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytomcat8webapp-deployment
  labels:
    app: tomcat8
spec:
  selector:
    matchLabels:
      app: tomcat8
  template:
    metadata:
      labels:
        app: tomcat8
    spec:
      containers:
      - name: tomcat8
        image: localhost:32000/mytomcat8webapp:registry
        ports:
        - containerPort: 8080
